# pyrekordbox

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  SQLCIPHER_WIN.md  SQLCIPHER_WINDOWS.md  install_pysqlcipher.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md
.github/workflows/: checkout-test.yml  codeql.yml  pypi-publish.yml  pypi-test-publish.yml  tests.yml  tests_3.11.yml
.testdata/export/PIONEER/: djprofile.nxs
.testdata/export/PIONEER/USBANLZ/P016/0000875E/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/export/PIONEER/USBANLZ/P017/00009B77/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/export/PIONEER/USBANLZ/P019/00020AA9/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/export/PIONEER/USBANLZ/P021/00006D2B/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/export/PIONEER/USBANLZ/P043/00011517/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/export/PIONEER/USBANLZ/P053/0001D21F/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/rekordbox 5/: database.xml  datafile.edb
.testdata/rekordbox 5/backup/: ExtData.edb  masterPlaylists3.xml
.testdata/rekordbox 5/backup/PIONEER/USBANLZ/P002/00009C2E/: ANLZ0000.EXT
.testdata/rekordbox 5/backup/PIONEER/USBANLZ/P02B/00023587/: ANLZ0000.EXT
.testdata/rekordbox 5/backup/PIONEER/USBANLZ/P035/00027763/: ANLZ0000.EXT
.testdata/rekordbox 5/backup/PIONEER/USBANLZ/P038/0002AAA0/: ANLZ0000.EXT
.testdata/rekordbox 5/backup/PIONEER/USBANLZ/P068/00012CA2/: ANLZ0000.EXT
.testdata/rekordbox 5/backup/PIONEER/USBANLZ/P076/00013B6E/: ANLZ0000.EXT
.testdata/rekordbox 6/: database.xml  masterPlaylists6.xml  master_locked.db  master_unlocked.db
.testdata/rekordbox 6/backup/: masterPlaylists6.xml
.testdata/rekordbox 6/backup/share/PIONEER/USBANLZ/003/c9538-33bc-4ca7-b6c7-e63ebf9a96f8/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/rekordbox 6/backup/share/PIONEER/USBANLZ/104/c82cc-661c-4f30-ab60-51ce1effeeed/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/rekordbox 6/backup/share/PIONEER/USBANLZ/36d/ad2b4-5d4e-4b94-9a5d-a5bb241aee4b/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/rekordbox 6/backup/share/PIONEER/USBANLZ/731/0104f-53cb-453e-8b83-e0dfd5cff825/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/rekordbox 6/backup/share/PIONEER/USBANLZ/c8b/ac74a-bbfc-4fce-8fb8-50aa4e974273/: ANLZ0000.2EX  ANLZ0000.EXT
.testdata/rekordbox 6/backup/share/PIONEER/USBANLZ/e35/fa187-3f34-47e2-9880-2b33cb8d1304/: ANLZ0000.2EX  ANLZ0000.EXT
Libs/: LICENSE_SQLCipher
Libs/sqlcipher_amalagamations/: sqlite3ext.h
docs/: mac_install.sh
docs/source/: api.md  api.rst  conf.py  index.md  index.rst  installation.md  key.md  quickstart.md  quickstart.rst  requirements.txt
docs/source/_templates/apidoc/: module.rst_t
docs/source/_templates/autosummary/: class.rst  module.rst
docs/source/development/: changes.md  contributing.md
docs/source/formats/: anlz.md  anlz.rst  db6.md  db6.rst  devicelib_plus.md  itunes.md  mysetting.md  mysetting.rst  xml.md  xml.rst
docs/source/tutorial/: anlz.md  configuration.md  configuration.rst  db6.md  index.md  index.rst  itunes.md  mysetting.md  xml.md
pyrekordbox/: __init__.py  __main__.py  config.py  database.py  itunes_xml.py  logger.py  mp3.py  rbxml.py  utils.py  xml.py
pyrekordbox/anlz/: __init__.py  file.py  structs.py  tags.py
pyrekordbox/cli/: __init__.py  cli.py  content.py  playlists.py
pyrekordbox/db6/: __init__.py  aux_files.py  database.py  registry.py  smart_playlist.py  smartlist.py  tables.py
pyrekordbox/devicelib_plus/: __init__.py  database.py  models.py
pyrekordbox/masterdb/: __init__.py  aux_files.py  database.py  models.py  registry.py  smartlist.py  tables.py
pyrekordbox/mysettings/: __init__.py  file.py  structs.py
tests/: __init__.py  pyrekordbox.toml  test_anlz.py  test_cli.py  test_config.py  test_db6.py  test_masterdb.py  test_mysetting.py  test_utils.py  test_xml.py
