[metadata]
name = pyrekordbox
description = Inofficial Python package for interacting with the library, analysis and export data of Pioneer's Rekordbox DJ software.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanljones/pyrekordbox
author = Dylan Jones
author_email = dylanljones94@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
project_urls =
    Source = https://github.com/dylanljones/pyrekordbox

[options]
packages = find:
install_requires =
    blowfish>=0.6.0
    construct>=2.10.0
    crc16>=0.1.0
    numpy>=1.19.0
    setuptools>=60.0.0
    setuptools-scm[toml]>=4,<6
    sqlalchemy>=1.4.0
python_requires = >=3.7, !=3.10.*
include_package_data = True
platforms = any
zip_safe = False

[options.extras_require]
build =
    wheel>=0.37.0
test =
    hypothesis>=6.0.0
    pytest>=6.2.0
    pytest-cov

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[build_sphinx]
project = pyrekordbox
source-dir = ./docs/source
build-dir = ./docs/build

[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like ``__str__`

[flake8]
max-line-length = 88
ignore = D203
extend-ignore = E203
per-file-ignores = __init__.py:F401
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist,
    */structs.py,
    */_version.py,
    docs/*
